--- a/assets/css/Accordion.css
+++ b/assets/css/Accordion.css
@@ -62,6 +62,8 @@
 	overflow: hidden;
 	box-shadow: 0px 0px 4px aqua, 0 0 8px blue, 0 0 16px violet;
 	transition: max-height 0.5s ease-in-out;
+	border-radius: 4px;
+    border-left: 4px solid  rgb(50, 150, 255);
 	/*opacity: 0.5;*/
 }
 
